<resources>
    <string name="app_name">BOOKSY</string>
    <string name="title_home">Browse</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_account">Account</string>

<!--    Login Page   -->
    <string name="login_prompt">Sign in to get started</string>

<!--    Home page   -->
    <string name="home_all_books">All Books</string>
    <string name="home_greeting_morning">Good Morning</string>
    <string name="home_greeting_noon">Good Afternoon</string>
    <string name="home_greeting_evening">Good Evening</string>
    <string name="home_search_prompt">Search Books</string>


    <string name="book_list_extra_detail">%d pages, %s</string>

    <string name="bookshelf_eds_title">It is so lonely in here</string>
    <string name="bookshelf_eds_message">You don\'t have any books in your shelf. Buy some to get started</string>
    <string name="bookshelf_eds_prompt">Browse all Books</string>

    <string name="bookCoverTransition">bookCover:%s</string>
    <string name="bookTitleTransition">bookTitle:%s</string>

    <string name="book_detail_pages">Pages</string>
    <string name="book_detail_year">Year</string>
    <string name="book_detail_language">Language</string>
    <string name="book_detail_rating">Rating: %s</string>
    <string name="book_detail_desc">Description</string>
    <string name="book_detail_genres">Genres</string>
    <string name="book_detail_publisher">Publisher</string>
    <string name="book_detail_isbn">ISBN</string>
    <string name="book_detail_authorAbout">About Author</string>

    <string name="book_detail_buy_button">buy this book</string>
    <string name="book_detail_read_button">start reading</string>
    <string name="book_detail_own_statement">You own this book</string>

    <string name="page_title_bookshelf">My Bookshelf</string>
    <string name="page_title_account">My Account</string>

    <string name="account_logged_in_label">Signed in as</string>
    <string name="account_logout_button">Sign Out</string>
</resources>