<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="me.shahim.booksy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookshelf"
        android:name="me.shahim.booksy.ui.bookshelf.BookshelfFragment"
        android:label="@string/title_bookshelf"
        tools:layout="@layout/fragment_bookshelf" >
        <action
            android:id="@+id/action_navigation_bookshelf_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="me.shahim.booksy.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="me.shahim.booksy.ui.bookdetail.BookDetailFragment"
        android:label="BookDetailFragment"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="bookid"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="author"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="cover"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_bookDetailFragment_to_readerFragment"
            app:destination="@id/readerFragment" />
    </fragment>
    <fragment
        android:id="@+id/readerFragment"
        android:name="me.shahim.booksy.ui.bookdetail.ReaderFragment"
        tools:layout="@layout/fragment_reader"
        android:label="ReaderFragment" />
</navigation>