<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.shahim.booksy.ui.account.AccountViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleMarginBottom="@dimen/activity_margin"
                app:expandedTitleMarginStart="@dimen/activity_margin"
                app:expandedTitleTextAppearance="@style/TextAppearance.Booksy.Headline3"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/page_title_account">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.Booksy.Toolbar.Transparent"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    app:cardElevation="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_margin">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/account_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_logged_in_label"
                            android:textAppearance="@style/TextAppearance.Booksy.Caption"
                            android:textColor="@color/textColorSecondary"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/accountName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/line_spacing"
                            android:textAppearance="@style/TextAppearance.Booksy.Headline6"
                            app:layout_constraintEnd_toStartOf="@+id/accountImage"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/account_label"
                            android:text="@{viewModel.user.displayName}"
                            tools:text="Shahim M" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/accountEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Booksy.Body2"
                            app:layout_constraintEnd_toEndOf="@+id/accountName"
                            app:layout_constraintEnd_toStartOf="@+id/accountImage"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/accountName"
                            android:text="@{viewModel.user.email}"
                            tools:text="shahim.calicut@gmail.com" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/accountImage"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:adjustViewBounds="true"
                            android:background="@color/colorSurface"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="@+id/accountEmail"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/accountName"
                            app:shapeAppearance="@style/ShapeAppearance.App.RoundedImageView.Circle" />

                        <Button
                            android:id="@+id/logoutBtn"
                            style="@style/ContainedButton.Secondary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_margin"
                            android:paddingHorizontal="@dimen/double_margin"
                            android:text="@string/account_logout_button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/accountEmail" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>